--- a/cleanup-pipeline/pipeline.yaml
+++ b/cleanup-pipeline/pipeline.yaml
@@ -1,17 +1,22 @@
 - project:
-    name: CLEANUP-PIPELINE
+    name: CLEANUP
     dependent-name: '{name}-BUILD'
     folder: EXAMPLES
     jobs:
-      - '{name}-PRE'
-      - '{name}-MAIN1'
-      - '{name}-MAIN2'
-      - '{name}-CLEANUP'
+      - '{folder}'
+      - '{folder}/{name}-PRE'
+      - '{folder}/{name}-MAIN1'
+      - '{folder}/{name}-MAIN2'
+      - '{folder}/{name}-FINAL'
 
 - job-template:
-    name: '{name}-PRE'
-    description: '{name} PRE [{branch}]'
-    display-name: '{name} PRE [{branch}]'
+    name: '{folder}'
+    project-type: folder
+
+- job-template:
+    name: '{folder}/{name}-PRE'
+    description: '{name} PRE '
+    display-name: '{name} PRE '
     builders:
       - shell: |
           #!/bin/bash
@@ -22,15 +27,18 @@
       - trigger:
           project: "{name}-MAIN1, {name}-MAIN2"
           threshold: SUCCESS
-      - trigger-parameterized-builds:
-          - project: 
-            - "{name}-CLEANUP"
+      - join-trigger:
+          publishers:
+            - trigger-parameterized-builds:
+              - project:
+                - "{folder}/{name}-FINAL"
+                trigger-with-no-params: true
 
 
 - job-template:
-    name: '{name}-MAIN1'
-    description: '{name} MAIN1 [{branch}]'
-    display-name: '{name} MAIN1 [{branch}]'
+    name: '{folder}/{name}-MAIN1'
+    description: '{name} MAIN1 '
+    display-name: '{name} MAIN1 '
     builders:
       - shell: |
           #!/bin/bash
@@ -39,9 +47,9 @@
           exit 0
 
 - job-template:
-    name: '{name}-MAIN2'
-    description: '{name} MAIN2 [{branch}]'
-    display-name: '{name} MAIN2 [{branch}]'
+    name: '{folder}/{name}-MAIN2'
+    description: '{name} MAIN2 '
+    display-name: '{name} MAIN2 '
     builders:
       - shell: |
           #!/bin/bash
@@ -50,13 +58,14 @@
           exit 1
 
 - job-template:
-    name: '{name}-CLEANUP'
-    description: '{name} CLEANUP [{branch}]'
-    display-name: '{name} CLEANUP [{branch}]'
+    name: '{folder}/{name}-FINAL'
+    description: '{name} FINAL '
+    display-name: '{name} FINAL '
     builders:
       - shell: |
           #!/bin/bash
           echo "Executing..."
           sleep 2
           exit 0
+
 
